Resolved old chrome version issue, spacing/positioning, a layer order bug for offset tooltips, and a relative positioning glitch
Enact-DCO-1.0-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/packages/moonstone/TooltipDecorator/Tooltip.module.less
+++ b/packages/moonstone/TooltipDecorator/Tooltip.module.less
@@ -7,11 +7,11 @@
 .tail (@edge, @point) {
 	background-image:
 		linear-gradient(to @edge, @moon-tooltip-border-color @moon-tooltip-border-width, transparent @moon-tooltip-border-width), // Edge line
-		linear-gradient(to @point @edge, @moon-tooltip-bg-color 50%, @moon-tooltip-border-color 50% ~"calc(50% + 1px)", transparent ~"calc(50% + 1px)"); // Diagonal line + fill
+		linear-gradient(to @point @edge, @moon-tooltip-bg-color 50%, @moon-tooltip-border-color 50%, @moon-tooltip-border-color ~"calc(50% + 1px)", transparent ~"calc(50% + 1px)"); // Diagonal line + fill
 }
 .centerTail (@edge, @point) {
 	background-image:
-		linear-gradient(to @point @edge, @moon-tooltip-bg-color 50%, @moon-tooltip-border-color 50% ~"calc(50% + 1px)", transparent ~"calc(50% + 1px)"); // Diagonal line + fill
+		linear-gradient(to @point @edge, @moon-tooltip-bg-color 50%, @moon-tooltip-border-color 50%, @moon-tooltip-border-color ~"calc(50% + 1px)", transparent ~"calc(50% + 1px)"); // Diagonal line + fill
 }
 
 .tooltip {
@@ -25,6 +25,7 @@
 		position: absolute;
 		width: @moon-tooltip-point-width;
 		height: @moon-tooltip-point-height;
+		z-index: 1;
 	}
 	&.rightArrow,
 	&.leftArrow {
@@ -58,6 +59,7 @@
 
 		&::after {
 			bottom: 99%;
+			left: 0;
 		}
 	}
 
@@ -158,11 +160,11 @@
 
 	&.left {
 		.tooltipArrow {
-			right: 1px;
+			right: (1px + @moon-tooltip-offset);
 		}
 
 		.tooltipLabel {
-			margin-right: @moon-tooltip-point-width;
+			margin-right: (@moon-tooltip-point-width + @moon-tooltip-offset);
 		}
 
 		&.topArrow {
@@ -177,7 +179,7 @@
 
 		&.middleArrow {
 			.tooltipArrow {
-				right: 1.5px;
+				right: (1.5px + @moon-tooltip-offset);
 			}
 		}
 
@@ -190,11 +192,11 @@
 
 	&.right {
 		.tooltipArrow {
-			left: 1px;
+			left: (1px + @moon-tooltip-offset);
 		}
 
 		.tooltipLabel {
-			margin-left: @moon-tooltip-point-width;
+			margin-left: (@moon-tooltip-point-width + @moon-tooltip-offset);
 		}
 
 		&.topArrow {
@@ -209,7 +211,7 @@
 
 		&.middleArrow {
 			.tooltipArrow {
-				left: 1.5px;
+				left: (1.5px + @moon-tooltip-offset);
 			}
 		}
 
@@ -277,7 +279,7 @@
 		}
 
 		&.left {
-			right: ~"calc(100% -" @moon-spotlight-outset ~")";
+			right: 100%;
 
 			&.topArrow {	bottom: 50%;	}
 			&.middleArrow,
@@ -287,7 +289,7 @@
 		}
 
 		&.right {
-			left: ~"calc(100% -" @moon-spotlight-outset ~")";
+			left: 100%;
 
 			&.topArrow {	bottom: 50%;	}
 			&.middleArrow,
